--- a/LittleMarksUnity/Little Marks/Assembly-CSharp.csproj
+++ b/LittleMarksUnity/Little Marks/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Demigiant\DOTween\Examples\Basics.cs" />
      <Compile Include="Assets\Demigiant\DOTween\Examples\Sequences.cs" />
      <Compile Include="Assets\Scripts\GameControl.cs" />
+     <Compile Include="Assets\Scripts\ObstacleSpawn.cs" />
      <Compile Include="Assets\Scripts\PlanetSpawn.cs" />
      <Compile Include="Assets\Scripts\RepeatingBackground.cs" />
      <Compile Include="Assets\Scripts\ScrollingObject.cs" />
