--- a/LittleMarksUnity/Little Marks/Assembly-CSharp.csproj
+++ b/LittleMarksUnity/Little Marks/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Demigiant\DOTween\Examples\Basics.cs" />
      <Compile Include="Assets\Demigiant\DOTween\Examples\Sequences.cs" />
+     <Compile Include="Assets\Scripts\checkPriceCollision.cs" />
      <Compile Include="Assets\Scripts\GameControl.cs" />
      <Compile Include="Assets\Scripts\menu_controller.cs" />
      <Compile Include="Assets\Scripts\ObstacleSpawn.cs" />
@@ -66,6 +67,7 @@
      <Compile Include="Assets\Scripts\Ship.cs" />
      <None Include="Assets\Demigiant\DOTween\readme.txt" />
      <None Include="Assets\Demigiant\DOTween\DOTween43.xml" />
+     <None Include="Assets\Plugin\Android\AndroidManifest.xml" />
      <None Include="Assets\Demigiant\DOTween\DOTween46.xml" />
      <None Include="Assets\Demigiant\DOTween\DOTween50.xml" />
  <Reference Include="Facebook.Unity.Settings">
@@ -103,6 +105,9 @@
  </Reference>
  <Reference Include="DOTween50">
  <HintPath>C:/Users/Usuario/Documents/Ciência Da Computação - 6º Semestre/PDS/LittleMarks_PDS-/LittleMarksUnity/Little Marks/Assets/Demigiant/DOTween/DOTween50.dll</HintPath>
+ </Reference>
+ <Reference Include="LitJson">
+ <HintPath>C:/Users/Usuario/Documents/Ciência Da Computação - 6º Semestre/PDS/LittleMarks_PDS-/LittleMarksUnity/Little Marks/Assets/Scripts/LitJson.dll</HintPath>
  </Reference>
  <Reference Include="zxing.unity">
  <HintPath>C:/Users/Usuario/Documents/Ciência Da Computação - 6º Semestre/PDS/LittleMarks_PDS-/LittleMarksUnity/Little Marks/Assets/Scripts/zxing.unity.dll</HintPath>
